# MyScripts

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: rank_drop_checker.py
tests/: test_rank_drop_checker.py
